# C4-Real-time-pedestrian-detection

./: .deps  .travis.yml  CMakeLists.txt  IntImage.h  Makefile  Makefile.MinGW64  Makefile.win  Pedestrian.h  Pedestrian_ICRA.cpp  README  README.md  appveyor.yml  c4-pedestrian-detector.cpp  conanfile.txt  main.cpp  mdarray.h
